# Leapcreww

./: .env.example  .gitignore  AUDIT_PROGRESS.md  CHANGELOG.md  CONSTITUTION.md  FEATURE_LIST.md  analysis.md  claude.md  eslint.config.mjs  get_template.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.antigravitycli/: 0320be97-92c7-4288-adbe-9cdd4b0ec6af.json
.claude/agents/: api-architect.md  prisma-steward.md  (+3 more)
docs/:  LEAPCREW — EXECUTIVE STRATEGY EVALUATION.md  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURE_LIST.md  Lead_Capture_Integration_Guide.docx  PRODUCT_COMPARISON_AISENSY.md  PUBLIC_API.md  SECURITY_REMEDIATION_PLAN.md  analysis.md  shopify-integration-setup.md  wappflow-onboarding-ux.md  whatsapp-onboarding-troubleshooting.md
make-blueprint/: wappflow-blueprint.json
mcp-server/: package.json  tsconfig.json
n8n-node/: index.ts  package.json  tsconfig.json
prisma/: schema.prisma
public/: widget.js
scripts/: dedupe-contacts.ts  rename-files.js  replace-brand.js
sdk/: package-lock.json  package.json  tsconfig.json
sdk-python/: pyproject.toml
sdk-python/wappflow/: __init__.py  _client.py  _exceptions.py  _types.py
sdk-python/wappflow/resources/: contacts.py  events.py  messages.py  templates.py
src/: instrumentation.ts  proxy.ts
utils/: test_cart_abandonment.js
video/: package-lock.json  remotion.config.ts  tsconfig.json
video_promo/: CREATIVE_PLAN.md  package-lock.json  package.json
zapier-app/: authentication.js  index.js  package.json
(+784 files in other folders)
