[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leapcreww"
version = "1.0.0"
description = "Official Python SDK for the LeapCreww API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]
keywords = ["whatsapp", "leapcreww", "sdk", "messaging", "crm"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "mypy>=1.0"]

[tool.mypy]
strict = true
